--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Build-Depends: gettext, dpkg-dev (>= 1.17.14), xz-utils, file, quilt,
  autoconf, gawk, debhelper (>= 9.20141010), rdfind, symlinks, netbase,
  linux-libc-dev (>= 3.9) [linux-any],
  libaudit-dev [linux-any], libcap-dev [linux-any], libselinux-dev [linux-any],
- mig (>= 1.4-2) [hurd-i386], hurd-dev (>= 1:0.5.git20140320~) [hurd-i386], gnumach-dev (>= 2:1.4+git20141109-1) [hurd-i386],
+ mig (>= 1.5-3) [hurd-i386], hurd-dev (>= 1:0.5.git20140320~) [hurd-i386], gnumach-dev (>= 2:1.4+git20141109-1) [hurd-i386],
  kfreebsd-kernel-headers [kfreebsd-any],
  binutils (>= 2.21),
  g++-4.9, g++-4.9-multilib [amd64 i386 kfreebsd-amd64 mips mipsel mipsn32 mipsn32el mips64 mips64el powerpc ppc64 s390x sparc sparc64 x32]
@@ -25,6 +25,7 @@ Priority: required
 Essential: yes
 Multi-Arch: foreign
 Depends: ${shlibs:Depends}, ${misc:Depends}, hurd (>= 20070606-1+SVN) [hurd-i386]
+Recommends: manpages
 Breaks: libc0.1 (<< 2.10), libc0.3 (<< 2.10), libc6 (<< 2.10), libc6.1 (<< 2.10)
 Replaces: libc0.1, libc0.3, libc6, libc6.1
 Build-Profiles: <!stage1>
@@ -45,7 +46,7 @@ Section: libdevel
 Priority: optional
 Multi-Arch: foreign
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Recommends: manpages-dev
+Recommends: manpages, manpages-dev
 Replaces: libc0.1-dev, libc0.3-dev, libc6-dev, libc6.1-dev
 Build-Profiles: <!stage1>
 Description: GNU C Library: Development binaries
@@ -96,8 +97,7 @@ Architecture: all
 Section: localization
 Priority: standard
 Depends: libc-bin (>> 2.21), libc-l10n (>> 2.21), ${misc:Depends}, debconf | debconf-2.0
-Conflicts: base-config, belocs-locales-bin, belocs-locales-data
-Replaces: base-config, lliurex-belocs-locales-data, manpages-fr-extra (<< 20141022)
+Replaces: manpages-fr-extra (<< 20141022)
 Build-Profiles: <!stage1>
 Description: GNU C Library: National Language (locale) data [support]
  Machine-readable data files, shared objects and programs used by the
@@ -164,7 +164,7 @@ Depends: ${shlibs:Depends}, ${libgcc:Depends}
 Recommends: libc6-i686 [i386], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386] 
 Suggests: glibc-doc, debconf | debconf-2.0, libc-l10n, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64]
-Conflicts: tzdata-etch, tzdata (<< 2007k-1), prelink (<= 0.0.20090311-1)
+Conflicts: prelink (<= 0.0.20090311-1), libc6-loongson2f [mipsel]
 Breaks: nscd (<< 2.21), locales (<< 2.21), locales-all (<< 2.21), lsb-core (<= 3.2-27) [amd64 ppc64 sparc64], libx11-6 (<< 1.1.4-2) [hurd-i386], libpthread-stubs0 (<< 0.3-4) [hurd-i386], hurd (<< 1:0.5.git20140203-1), libtirpc1 (<< 0.2.3)
 Replaces: libc6-amd64 [amd64],
           libc6-i386 [i386],
@@ -250,7 +250,7 @@ Depends: ${shlibs:Depends}, ${libgcc:Depends}
 Recommends: libc6-i686 [i386], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386] 
 Suggests: glibc-doc, debconf | debconf-2.0, libc-l10n, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64]
-Conflicts: tzdata-etch, tzdata (<< 2007k-1), prelink (<= 0.0.20090311-1)
+Conflicts: prelink (<= 0.0.20090311-1), libc6-loongson2f [mipsel]
 Breaks: nscd (<< 2.21), locales (<< 2.21), locales-all (<< 2.21), lsb-core (<= 3.2-27) [amd64 ppc64 sparc64], libx11-6 (<< 1.1.4-2) [hurd-i386], libpthread-stubs0 (<< 0.3-4) [hurd-i386], hurd (<< 1:0.5.git20140203-1), libtirpc1 (<< 0.2.3)
 Replaces: libc6-amd64 [amd64],
           libc6-i386 [i386],
@@ -336,7 +336,7 @@ Depends: ${shlibs:Depends}, ${libgcc:Depends}
 Recommends: libc6-i686 [i386], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386] 
 Suggests: glibc-doc, debconf | debconf-2.0, libc-l10n, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64]
-Conflicts: tzdata-etch, tzdata (<< 2007k-1), prelink (<= 0.0.20090311-1)
+Conflicts: prelink (<= 0.0.20090311-1), libc6-loongson2f [mipsel]
 Breaks: nscd (<< 2.21), locales (<< 2.21), locales-all (<< 2.21), lsb-core (<= 3.2-27) [amd64 ppc64 sparc64], libx11-6 (<< 1.1.4-2) [hurd-i386], libpthread-stubs0 (<< 0.3-4) [hurd-i386], hurd (<< 1:0.5.git20140203-1), libtirpc1 (<< 0.2.3)
 Replaces: libc6-amd64 [amd64],
           libc6-i386 [i386],
@@ -422,7 +422,7 @@ Depends: ${shlibs:Depends}, ${libgcc:Depends}
 Recommends: libc6-i686 [i386], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386] 
 Suggests: glibc-doc, debconf | debconf-2.0, libc-l10n, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64]
-Conflicts: tzdata-etch, tzdata (<< 2007k-1), prelink (<= 0.0.20090311-1)
+Conflicts: prelink (<= 0.0.20090311-1), libc6-loongson2f [mipsel]
 Breaks: nscd (<< 2.21), locales (<< 2.21), locales-all (<< 2.21), lsb-core (<= 3.2-27) [amd64 ppc64 sparc64], libx11-6 (<< 1.1.4-2) [hurd-i386], libpthread-stubs0 (<< 0.3-4) [hurd-i386], hurd (<< 1:0.5.git20140203-1), libtirpc1 (<< 0.2.3)
 Replaces: libc6-amd64 [amd64],
           libc6-i386 [i386],
@@ -610,7 +610,6 @@ Architecture: i386 x32
 Section: libs
 Priority: optional
 Depends: libc6 (= ${binary:Version}), ${misc:Depends}
-Conflicts: amd64-libs (<= 1.2)
 Build-Profiles: <!stage1 !nobiarch>
 Description: GNU C Library: 64bit Shared libraries for AMD64
  This package includes shared versions of the standard C library and the
@@ -624,7 +623,7 @@ Priority: optional
 Depends: libc6-amd64 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
 Recommends: gcc-multilib
 Conflicts: libc6-dev (<< 2.13-14)
-Replaces: amd64-libs-dev (<= 1.2), libc6-dev (<< 2.13-11)
+Replaces: libc6-dev (<< 2.13-11)
 Provides: lib64c-dev
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 64bit Development Libraries for AMD64
@@ -918,23 +917,6 @@ Description: GNU C Library: Shared libraries (EV67 optimized)
  This set of libraries is optimized for the Alpha EV67. It only
  needs to be installed on Alpha EV67/68 and EV7 machines. If you install
  this on an older machine, it won't even be used.
-
-Package: libc6-loongson2f
-Architecture: mipsel
-Section: libs
-Priority: extra
-Multi-Arch: same
-Pre-Depends: libc6 (= ${binary:Version})
-Depends: ${misc:Depends}
-Build-Profiles: <!stage1>
-Description: GNU C Library: Shared libraries (Loongson 2F optimized)
- Contains the standard libraries that are used by nearly all programs on
- the system. This package includes shared versions of the standard C
- library and the standard math library, as well as many others.
- .
- This set of libraries is optimized for the Loongson 2F. It only
- needs to be installed on Lemote Loongson 2F machines. If you install
- this on a non-Loongson, it won't even be used.
 
 Package: libnss-dns-udeb
 XC-Package-Type: udeb
