--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,8 @@ Build-Depends: gettext, dpkg-dev (>= 1.17.14), xz-utils, file, quilt,
  hurd-dev (>= 1:0.5.git20140320~) [hurd-i386] <!stage1> | libihash-dev [hurd-i386] <!stage1>,
  kfreebsd-kernel-headers [kfreebsd-any],
  binutils (>= 2.21),
- g++-5, g++-5-multilib [amd64 i386 kfreebsd-amd64 mips mipsel mipsn32 mipsn32el mips64 mips64el powerpc ppc64 s390x sparc sparc64 x32]
+ g++-5, g++-5-multilib [amd64 i386 kfreebsd-amd64 mips mipsel mipsn32 mipsn32el mips64 mips64el powerpc ppc64 s390x sparc sparc64 x32],
+ libc-bin (>= 2.23) <cross>
 Build-Depends-Indep: perl, po-debconf (>= 1.0)
 Maintainer: GNU Libc Maintainers <debian-glibc@lists.debian.org>
 Uploaders: Clint Adams <clint@debian.org>, Aurelien Jarno <aurel32@debian.org>, Adam Conrad <adconrad@0c3.net>
@@ -28,8 +29,6 @@ Essential: yes
 Multi-Arch: foreign
 Depends: ${shlibs:Depends}, ${misc:Depends}, hurd (>= 20070606-1+SVN) [hurd-i386]
 Recommends: manpages
-Breaks: libc0.1 (<< 2.10), libc0.3 (<< 2.10), libc6 (<< 2.10), libc6.1 (<< 2.10)
-Replaces: libc0.1, libc0.3, libc6, libc6.1
 Build-Profiles: <!stage1>
 Description: GNU C Library: Binaries
  This package contains utility programs related to the GNU C Library.
@@ -49,7 +48,6 @@ Priority: optional
 Multi-Arch: foreign
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: manpages, manpages-dev
-Replaces: libc0.1-dev, libc0.3-dev, libc6-dev, libc6.1-dev
 Build-Profiles: <!stage1>
 Description: GNU C Library: Development binaries
  This package contains utility programs related to the GNU C Library
@@ -507,7 +505,6 @@ Section: libs
 Priority: optional
 Depends: libc6 (= ${binary:Version}), ${misc:Depends}
 Replaces: libc6-dev-i386
-Breaks: fakeroot (<< 1.12.3), gnu-efi (<< 3.0e-3), fakechroot (<< 2.9-1.1), fglrx-glx-ia32 (<< 1:9-6-1), ia32-libs (<< 20090804), ia32-libs-gtk (<< 20090804), lib32asound2 (<< 1.0.20-3), lib32asound2-dev (<< 1.0.20-3), lib32bz2-1.0 (<< 1.0.5-3), lib32bz2-dev (<< 1.0.5-3), lib32ffi-dev (<< 3.0.9~rc9-1), lib32ffi5 (<< 3.0.9~rc9-1), lib32g2c0 (<< 1:3.4.6-10), lib32gcc1 (<< 1:4.4.0-7), lib32gfortran3 (<< 4.4.0-7), lib32gmp3 (<< 2:4.3.1+dfsg-3), lib32gmp3-dev (<< 2:4.3.1+dfsg-3), lib32gmpxx4 (<< 2:4.3.1+dfsg-3), lib32gomp1 (<< 4.4.0-7), lib32icu-dev (<< 4.0.1-3), lib32icu40 (<< 4.0.1-3), lib32mudflap0 (<< 4.4.0-7), lib32ncurses5 (<< 5.7+20090523-1), lib32ncurses5-dev (<< 5.7+20090530-1), lib32ncursesw5 (<< 5.7+20090530-1), lib32ncursesw5-dev (<< 5.7+20090530-1), lib32nss-mdns (<< 0.10-3.1), lib32objc2 (<< 4.4.0-7), lib32readline5 (<< 5.2-5), lib32readline5-dev (<< 5.2-5), lib32stdc++6 (<< 4.4.0-7), lib32stdc++6-4.4-dbg (<< 4.4.0-7), lib32z1 (<< 1:1.2.3.3.dfsg-14), lib32z1-dev (<< 1:1.2.3.3.dfsg-14), libc6-dev-i386 (<< 2.9-15), nvidia-glx-ia32 (<< 185.18.14-2), nvidia-libvdpau1-ia32 (<< 185.18.14-2)
 Build-Profiles: <!stage1 !nobiarch>
 Description: GNU C Library: 32-bit shared libraries for AMD64
  This package includes shared versions of the standard C
@@ -519,8 +516,6 @@ Architecture: amd64 x32
 Section: libdevel
 Priority: optional
 Provides: lib32c-dev
-Conflicts: libc6-i386 (<= 2.9-18), libc6-dev (<< 2.13-14)
-Replaces: libc6-dev (<< 2.13-11)
 Depends: libc6-i386 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
 Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
@@ -545,8 +540,6 @@ Architecture: sparc64
 Section: libdevel
 Priority: optional
 Provides: lib32c-dev
-Conflicts: libc6-dev (<< 2.13-14)
-Replaces: libc6-dev (<< 2.13-11)
 Depends: libc6-sparc (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
 Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
@@ -571,8 +564,6 @@ Architecture: sparc
 Section: libdevel
 Priority: optional
 Provides: lib64c-dev
-Conflicts: libc6-dev (<< 2.13-14)
-Replaces: libc6-dev (<< 2.13-11)
 Depends: libc6-sparc64 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
 Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
@@ -597,8 +588,6 @@ Architecture: s390x
 Section: libdevel
 Priority: optional
 Provides: lib32c-dev
-Conflicts: libc6-dev (<< 2.13-14)
-Replaces: libc6-dev (<< 2.13-11)
 Depends: libc6-s390 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
 Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
@@ -624,8 +613,6 @@ Section: libdevel
 Priority: optional
 Depends: libc6-amd64 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
 Recommends: gcc-multilib
-Conflicts: libc6-dev (<< 2.13-14)
-Replaces: libc6-dev (<< 2.13-11)
 Provides: lib64c-dev
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 64bit Development Libraries for AMD64
@@ -649,8 +636,6 @@ Architecture: ppc64
 Section: libdevel
 Priority: optional
 Provides: lib32c-dev
-Conflicts: libc6-dev (<< 2.13-14)
-Replaces: libc6-dev (<< 2.13-11)
 Depends: libc6-powerpc (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
 Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
@@ -675,8 +660,6 @@ Architecture: powerpc
 Section: libdevel
 Priority: optional
 Provides: lib64c-dev
-Conflicts: libc6-dev (<< 2.13-14)
-Replaces: libc6-dev (<< 2.13-11)
 Depends: libc6-ppc64 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
 Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
@@ -701,8 +684,6 @@ Architecture: mipsn32 mipsn32el mips64 mips64el
 Section: libdevel
 Priority: optional
 Provides: lib32c-dev
-Conflicts: libc6-dev (<< 2.13-14)
-Replaces: libc6-dev (<< 2.13-11)
 Depends: libc6-dev (= ${binary:Version}), libc6-mips32 (= ${binary:Version}),
    libc6-dev-mipsn32 (= ${binary:Version}) [mips64 mips64el],
    libc6-dev-mips64 (= ${binary:Version}) [mipsn32 mipsn32el],
@@ -730,8 +711,6 @@ Architecture: mips mipsel mips64 mips64el
 Section: libdevel
 Priority: optional
 Provides: libn32c-dev
-Conflicts: libc6-dev (<< 2.13-14)
-Replaces: libc6-dev (<< 2.13-11)
 Depends: libc6-mipsn32 (= ${binary:Version}), libc6-dev-mips64 (= ${binary:Version}) [mips mipsel], libc6-dev (= ${binary:Version}), ${misc:Depends}
 Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
@@ -756,8 +735,6 @@ Architecture: mips mipsel mipsn32 mipsn32el
 Section: libdevel
 Priority: optional
 Provides: lib64c-dev
-Conflicts: libc6-dev (<< 2.13-14)
-Replaces: libc6-dev (<< 2.13-11)
 Depends: libc6-mips64 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
 Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
@@ -782,8 +759,6 @@ Architecture: kfreebsd-amd64
 Section: libdevel
 Priority: optional
 Provides: lib32c-dev
-Conflicts: libc0.1-dev (<< 2.13-14)
-Replaces: libc0.1-dev (<< 2.13-11)
 Depends: libc0.1-i386 (= ${binary:Version}), libc0.1-dev (= ${binary:Version}), ${misc:Depends}
 Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
