--- a/debian/control
+++ b/debian/control
@@ -526,7 +526,7 @@ Section: libdevel
 Priority: optional
 Provides: lib32c-dev
 Depends: libc6-i386 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
-Recommends: gcc-multilib
+Suggests: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 32-bit development libraries for AMD64
  Contains the symlinks and object files needed to compile and link programs
@@ -550,7 +550,7 @@ Section: libdevel
 Priority: optional
 Provides: lib32c-dev
 Depends: libc6-sparc (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
-Recommends: gcc-multilib
+Suggests: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 32bit Development Libraries for SPARC
  Contains the symlinks and object files needed to compile and link programs
@@ -574,7 +574,7 @@ Section: libdevel
 Priority: optional
 Provides: lib64c-dev
 Depends: libc6-sparc64 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
-Recommends: gcc-multilib
+Suggests: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 64bit Development Libraries for UltraSPARC
  Contains the symlinks and object files needed to compile and link programs
@@ -598,7 +598,7 @@ Section: libdevel
 Priority: optional
 Provides: lib32c-dev
 Depends: libc6-s390 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
-Recommends: gcc-multilib
+Suggests: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 32bit Development Libraries for IBM zSeries
  Contains the symlinks and object files needed to compile and link programs
@@ -621,7 +621,7 @@ Architecture: i386 x32
 Section: libdevel
 Priority: optional
 Depends: libc6-amd64 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
-Recommends: gcc-multilib
+Suggests: gcc-multilib
 Provides: lib64c-dev
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 64bit Development Libraries for AMD64
@@ -646,7 +646,7 @@ Section: libdevel
 Priority: optional
 Provides: lib32c-dev
 Depends: libc6-powerpc (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
-Recommends: gcc-multilib
+Suggests: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 32bit powerpc development libraries for ppc64
  Contains the symlinks and object files needed to compile and link programs
@@ -670,7 +670,7 @@ Section: libdevel
 Priority: optional
 Provides: lib64c-dev
 Depends: libc6-ppc64 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
-Recommends: gcc-multilib
+Suggests: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 64bit Development Libraries for PowerPC64
  Contains the symlinks and object files needed to compile and link programs
@@ -697,7 +697,7 @@ Depends: libc6-dev (= ${binary:Version}), libc6-mips32 (= ${binary:Version}),
    libc6-dev-mipsn32 (= ${binary:Version}) [mips64 mips64el],
    libc6-dev-mips64 (= ${binary:Version}) [mipsn32 mipsn32el],
    ${misc:Depends}
-Recommends: gcc-multilib
+Suggests: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: o32 Development Libraries for MIPS
  Contains the symlinks and object files needed to compile and link programs
@@ -721,7 +721,7 @@ Section: libdevel
 Priority: optional
 Provides: libn32c-dev
 Depends: libc6-mipsn32 (= ${binary:Version}), libc6-dev-mips64 (= ${binary:Version}) [mips mipsel], libc6-dev (= ${binary:Version}), ${misc:Depends}
-Recommends: gcc-multilib
+Suggests: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: n32 Development Libraries for MIPS64
  Contains the symlinks and object files needed to compile and link programs
@@ -745,7 +745,7 @@ Section: libdevel
 Priority: optional
 Provides: lib64c-dev
 Depends: libc6-mips64 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
-Recommends: gcc-multilib
+Suggests: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 64bit Development Libraries for MIPS64
  Contains the symlinks and object files needed to compile and link programs
@@ -769,7 +769,7 @@ Section: libdevel
 Priority: optional
 Provides: lib32c-dev
 Depends: libc0.1-i386 (= ${binary:Version}), libc0.1-dev (= ${binary:Version}), ${misc:Depends}
-Recommends: gcc-multilib
+Suggests: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 32bit development libraries for AMD64
  Contains the symlinks and object files needed to compile and link programs
