--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: glibc
 Section: libs
 Priority: required
 Build-Depends: gettext, dpkg (>= 1.18.7), dpkg-dev (>= 1.17.14), xz-utils, file, quilt,
- autoconf, gawk, debhelper (>= 9.20160709), rdfind, symlinks, netbase, gperf,
+ autoconf, gawk, debhelper (>= 10), rdfind, symlinks, netbase, gperf,
  linux-libc-dev (>= 3.9) [linux-any],
  libaudit-dev [linux-any], libcap-dev [linux-any], libselinux-dev [linux-any],
  mig (>= 1.5-3) [hurd-i386], gnumach-dev (>= 2:1.8+git20170102-1~) [hurd-i386],
@@ -12,6 +12,7 @@ Build-Depends: gettext, dpkg (>= 1.18.7), dpkg-dev (>= 1.17.14), xz-utils, file,
  binutils (>= 2.21),
  g++-6, g++-6-multilib [amd64 i386 kfreebsd-amd64 mips mipsel mipsn32 mipsn32el mips64 mips64el powerpc ppc64 s390x sparc sparc64 x32],
  g++-6 (>= 6.1.1-1~) [hurd-i386 i386 kfreebsd-i386],
+ python3:native <!nocheck>,
  libc-bin (>= 2.25) <cross>
 Build-Depends-Indep: perl, po-debconf (>= 1.0)
 Maintainer: GNU Libc Maintainers <debian-glibc@lists.debian.org>
@@ -114,7 +115,7 @@ Description: GNU C Library: National Language (locale) data [support]
 Package: locales-all
 Architecture: any
 Section: localization
-Priority: extra
+Priority: optional
 Multi-Arch: foreign
 Depends: libc-l10n (>> 2.25), ${misc:Depends}
 Breaks: locales (<< 2.13-17)
@@ -140,6 +141,7 @@ Description: GNU C Library: Name Service Cache Daemon
 
 Package: multiarch-support
 Architecture: any
+Section: oldlibs
 Multi-Arch: foreign
 Depends: ${misc:Depends},
 	 libc6 (>= 2.3.6-2) [!any-i386 !alpha !armhf !hurd-any !kfreebsd-any],
@@ -149,7 +151,7 @@ Depends: ${misc:Depends},
          libc6 (>= 2.13-5) [armhf i386],
          libc0.3 (>= 2.13-5) [hurd-i386],
          libc0.1 (>= 2.13-5) [kfreebsd-i386],
-Priority: required
+Priority: optional
 Build-Profiles: <!stage1>
 Description: Transitional package to ensure multiarch compatibility
  This is a transitional package used to ensure multiarch support is present
@@ -205,7 +207,7 @@ Description: GNU C Library: Development Libraries and Header Files
 Package: libc6-dbg
 Architecture: amd64 arm64 armel armhf hppa i386 m68k mips mipsel mipsn32 mipsn32el mips64 mips64el nios2 powerpc powerpcspe ppc64 ppc64el sparc sparc64 s390x sh3 sh4 x32
 Section: debug
-Priority: extra
+Priority: optional
 Multi-Arch: same
 Provides: libc-dbg
 Depends: libc6 (= ${binary:Version}), ${misc:Depends}
@@ -233,7 +235,7 @@ Package: libc6-udeb
 Package-Type: udeb
 Architecture: amd64 arm64 armel armhf hppa i386 m68k mips mipsel mipsn32 mipsn32el mips64 mips64el nios2 powerpc powerpcspe ppc64 ppc64el sparc sparc64 s390x sh3 sh4 x32
 Section: debian-installer
-Priority: extra
+Priority: optional
 Provides: libc6, libc-udeb, libnss-dns-udeb, libnss-files-udeb, ${locale-compat:Depends}
 Build-Profiles: <!stage1>
 Description: GNU C Library: Shared libraries - udeb
@@ -293,7 +295,7 @@ Description: GNU C Library: Development Libraries and Header Files
 Package: libc6.1-dbg
 Architecture: alpha
 Section: debug
-Priority: extra
+Priority: optional
 Multi-Arch: same
 Provides: libc-dbg
 Depends: libc6.1 (= ${binary:Version}), ${misc:Depends}
@@ -321,7 +323,7 @@ Package: libc6.1-udeb
 Package-Type: udeb
 Architecture: alpha
 Section: debian-installer
-Priority: extra
+Priority: optional
 Provides: libc6.1, libc-udeb, libnss-dns-udeb, libnss-files-udeb, ${locale-compat:Depends}
 Build-Profiles: <!stage1>
 Description: GNU C Library: Shared libraries - udeb
@@ -381,7 +383,7 @@ Description: GNU C Library: Development Libraries and Header Files
 Package: libc0.3-dbg
 Architecture: hurd-i386
 Section: debug
-Priority: extra
+Priority: optional
 Multi-Arch: same
 Provides: libc-dbg
 Depends: libc0.3 (= ${binary:Version}), ${misc:Depends}
@@ -409,7 +411,7 @@ Package: libc0.3-udeb
 Package-Type: udeb
 Architecture: hurd-i386
 Section: debian-installer
-Priority: extra
+Priority: optional
 Provides: libc0.3, libc-udeb, libnss-dns-udeb, libnss-files-udeb, ${locale-compat:Depends}
 Build-Profiles: <!stage1>
 Description: GNU C Library: Shared libraries - udeb
@@ -469,7 +471,7 @@ Description: GNU C Library: Development Libraries and Header Files
 Package: libc0.1-dbg
 Architecture: kfreebsd-amd64 kfreebsd-i386
 Section: debug
-Priority: extra
+Priority: optional
 Multi-Arch: same
 Provides: libc-dbg
 Depends: libc0.1 (= ${binary:Version}), ${misc:Depends}
@@ -497,7 +499,7 @@ Package: libc0.1-udeb
 Package-Type: udeb
 Architecture: kfreebsd-amd64 kfreebsd-i386
 Section: debian-installer
-Priority: extra
+Priority: optional
 Provides: libc0.1, libc-udeb, libnss-dns-udeb, libnss-files-udeb, ${locale-compat:Depends}
 Build-Profiles: <!stage1>
 Description: GNU C Library: Shared libraries - udeb
@@ -526,7 +528,7 @@ Section: libdevel
 Priority: optional
 Provides: lib32c-dev
 Depends: libc6-i386 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
-Suggests: gcc-multilib
+Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 32-bit development libraries for AMD64
  Contains the symlinks and object files needed to compile and link programs
@@ -550,7 +552,7 @@ Section: libdevel
 Priority: optional
 Provides: lib32c-dev
 Depends: libc6-sparc (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
-Suggests: gcc-multilib
+Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 32bit Development Libraries for SPARC
  Contains the symlinks and object files needed to compile and link programs
@@ -574,7 +576,7 @@ Section: libdevel
 Priority: optional
 Provides: lib64c-dev
 Depends: libc6-sparc64 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
-Suggests: gcc-multilib
+Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 64bit Development Libraries for UltraSPARC
  Contains the symlinks and object files needed to compile and link programs
@@ -598,7 +600,7 @@ Section: libdevel
 Priority: optional
 Provides: lib32c-dev
 Depends: libc6-s390 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
-Suggests: gcc-multilib
+Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 32bit Development Libraries for IBM zSeries
  Contains the symlinks and object files needed to compile and link programs
@@ -621,7 +623,7 @@ Architecture: i386 x32
 Section: libdevel
 Priority: optional
 Depends: libc6-amd64 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
-Suggests: gcc-multilib
+Recommends: gcc-multilib
 Provides: lib64c-dev
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 64bit Development Libraries for AMD64
@@ -646,7 +648,7 @@ Section: libdevel
 Priority: optional
 Provides: lib32c-dev
 Depends: libc6-powerpc (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
-Suggests: gcc-multilib
+Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 32bit powerpc development libraries for ppc64
  Contains the symlinks and object files needed to compile and link programs
@@ -670,7 +672,7 @@ Section: libdevel
 Priority: optional
 Provides: lib64c-dev
 Depends: libc6-ppc64 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
-Suggests: gcc-multilib
+Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 64bit Development Libraries for PowerPC64
  Contains the symlinks and object files needed to compile and link programs
@@ -697,7 +699,7 @@ Depends: libc6-dev (= ${binary:Version}), libc6-mips32 (= ${binary:Version}),
    libc6-dev-mipsn32 (= ${binary:Version}) [mips64 mips64el],
    libc6-dev-mips64 (= ${binary:Version}) [mipsn32 mipsn32el],
    ${misc:Depends}
-Suggests: gcc-multilib
+Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: o32 Development Libraries for MIPS
  Contains the symlinks and object files needed to compile and link programs
@@ -721,7 +723,7 @@ Section: libdevel
 Priority: optional
 Provides: libn32c-dev
 Depends: libc6-mipsn32 (= ${binary:Version}), libc6-dev-mips64 (= ${binary:Version}) [mips mipsel], libc6-dev (= ${binary:Version}), ${misc:Depends}
-Suggests: gcc-multilib
+Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: n32 Development Libraries for MIPS64
  Contains the symlinks and object files needed to compile and link programs
@@ -745,7 +747,7 @@ Section: libdevel
 Priority: optional
 Provides: lib64c-dev
 Depends: libc6-mips64 (= ${binary:Version}), libc6-dev (= ${binary:Version}), ${misc:Depends}
-Suggests: gcc-multilib
+Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 64bit Development Libraries for MIPS64
  Contains the symlinks and object files needed to compile and link programs
@@ -769,7 +771,7 @@ Section: libdevel
 Priority: optional
 Provides: lib32c-dev
 Depends: libc0.1-i386 (= ${binary:Version}), libc0.1-dev (= ${binary:Version}), ${misc:Depends}
-Suggests: gcc-multilib
+Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: 32bit development libraries for AMD64
  Contains the symlinks and object files needed to compile and link programs
@@ -792,6 +794,7 @@ Architecture: amd64 i386
 Section: libdevel
 Priority: optional
 Depends: libc6-x32 (= ${binary:Version}), libc6-dev-i386 (= ${binary:Version}) [amd64], libc6-dev-amd64 (= ${binary:Version}) [i386], libc6-dev (= ${binary:Version}), ${misc:Depends}
+Recommends: gcc-multilib
 Build-Profiles: <!nobiarch>
 Description: GNU C Library: X32 ABI Development Libraries for AMD64
  Contains the symlinks and object files needed to compile and link programs
@@ -801,7 +804,7 @@ Description: GNU C Library: X32 ABI Development Libraries for AMD64
 Package: libc6-xen
 Architecture: i386
 Section: libs
-Priority: extra
+Priority: optional
 Multi-Arch: same
 Pre-Depends: libc6 (= ${binary:Version})
 Depends: ${misc:Depends}
@@ -817,7 +820,7 @@ Description: GNU C Library: Shared libraries [Xen version]
 Package: libc0.3-xen
 Architecture: hurd-i386
 Section: libs
-Priority: extra
+Priority: optional
 Multi-Arch: same
 Pre-Depends: libc0.3 (= ${binary:Version})
 Depends: ${misc:Depends}
@@ -833,7 +836,7 @@ Description: GNU C Library: Shared libraries [Xen version]
 Package: libc6.1-alphaev67
 Architecture: alpha
 Section: libs
-Priority: extra
+Priority: optional
 Multi-Arch: same
 Pre-Depends: libc6.1 (= ${binary:Version})
 Depends: ${misc:Depends}
@@ -846,31 +849,4 @@ Description: GNU C Library: Shared libraries (EV67 optimized)
  This set of libraries is optimized for the Alpha EV67. It only
  needs to be installed on Alpha EV67/68 and EV7 machines. If you install
  this on an older machine, it won't even be used.
-
-Package: libc0.1-i686
-Architecture: kfreebsd-i386
-Section: oldlibs
-Priority: extra
-Multi-Arch: same
-Depends: ${misc:Depends}
-Description: transitional dummy package
- This package is a dummy transitional package. It can be safely removed.
-
-Package: libc0.3-i686
-Architecture: hurd-i386
-Section: oldlibs
-Priority: extra
-Multi-Arch: same
-Depends: ${misc:Depends}
-Description: transitional dummy package
- This package is a dummy transitional package. It can be safely removed.
-
-Package: libc6-i686
-Architecture: i386
-Section: oldlibs
-Priority: extra
-Multi-Arch: same
-Depends: ${misc:Depends}
-Description: transitional dummy package
- This package is a dummy transitional package. It can be safely removed.
 
