--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: glibc
 Section: libs
 Priority: required
 Build-Depends: gettext, dpkg (>= 1.18.7), dpkg-dev (>= 1.17.14), xz-utils, file, quilt,
- autoconf, gawk, debhelper (>= 10), rdfind, symlinks, netbase, gperf,
+ autoconf, autotools-dev, gawk, debhelper (>= 10), rdfind, symlinks, netbase, gperf,
  linux-libc-dev (>= 3.9) [linux-any],
  libaudit-dev [linux-any], libcap-dev [linux-any], libselinux-dev [linux-any],
  mig (>= 1.5-3) [hurd-i386], gnumach-dev (>= 2:1.8+git20170102-1~) [hurd-i386],
@@ -17,11 +17,10 @@ Build-Depends: gettext, dpkg (>= 1.18.7), dpkg-dev (>= 1.17.14), xz-utils, file,
 Build-Depends-Indep: perl, po-debconf (>= 1.0)
 Maintainer: GNU Libc Maintainers <debian-glibc@lists.debian.org>
 Uploaders: Clint Adams <clint@debian.org>, Aurelien Jarno <aurel32@debian.org>, Adam Conrad <adconrad@0c3.net>, Samuel Thibault <sthibault@debian.org>
-Standards-Version: 3.9.8
+Standards-Version: 4.0.1
 Vcs-Browser: https://anonscm.debian.org/cgit/pkg-glibc/glibc.git
 Vcs-Git: https://anonscm.debian.org/git/pkg-glibc/glibc.git
 Homepage: http://www.gnu.org/software/libc/libc.html
-XS-Testsuite: autopkgtest
 
 Package: libc-bin
 Architecture: any
