--- a/debian/rules
+++ b/debian/rules
@@ -197,6 +197,7 @@ endif
 include debian/rules.d/*.mk
 
 clean:: unpatch
+	dh_autotools-dev_restoreconfig
 	rm -f $(CURDIR)/po/*.mo
 	rm -rf $(patsubst %,debian/tmp-%,$(GLIBC_PASSES))
 	rm -rf $(build-tree)
