--- a/debian/rules
+++ b/debian/rules
@@ -98,6 +98,7 @@ BASE_MIG = mig
 DEB_GCC_VERSION ?= -7
 
 RUN_TESTSUITE = yes
+TIMEOUTFACTOR = 25
 
 # Set cross and native compiler names, including version.
 CC     = $(DEB_HOST_GNU_TYPE)-$(BASE_CC)$(DEB_GCC_VERSION) -no-pie -fno-PIE
@@ -116,11 +117,6 @@ configure_target := $(DEB_HOST_GNU_TYPE)
 # they can set the --build to match --host for that optimized build.
 # Among other things this lets tests run.
 configure_build := $(DEB_BUILD_GNU_TYPE)
-
-log_build    = $(build-tree)/log-build-$(call xx,configure_target)-$(curpass)
-log_test     = $(build-tree)/log-test-$(call xx,configure_target)-$(curpass)
-log_results  = $(build-tree)/test-results-$(call xx,configure_target)-$(curpass)
-log_expected = debian/testsuite-checking/expected-results-$(call xx,configure_target)-$(curpass)
 
 # Which build pass are we on?
 curpass = $(filter-out %_,$(subst _,_ ,$@))
