--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,7 @@ Maintainer: GNU Libc Maintainers <debian-glibc@lists.debian.org>
 Uploaders: Clint Adams <clint@debian.org>, Aurelien Jarno <aurel32@debian.org>, Adam Conrad <adconrad@0c3.net>, Samuel Thibault <sthibault@debian.org>
 Standards-Version: 4.1.3
 Vcs-Browser: https://anonscm.debian.org/cgit/pkg-glibc/glibc.git
-Vcs-Git: https://anonscm.debian.org/git/pkg-glibc/glibc.git -b glibc-2.26
+Vcs-Git: https://anonscm.debian.org/git/pkg-glibc/glibc.git
 Homepage: https://www.gnu.org/software/libc/libc.html
 
 Package: libc-bin
