--- a/debian/control
+++ b/debian/control
@@ -20,7 +20,7 @@ Maintainer: GNU Libc Maintainers <debian-glibc@lists.debian.org>
 Uploaders: Clint Adams <clint@debian.org>, Aurelien Jarno <aurel32@debian.org>, Adam Conrad <adconrad@0c3.net>, Samuel Thibault <sthibault@debian.org>
 Standards-Version: 4.2.1
 Vcs-Browser: https://salsa.debian.org/glibc-team/glibc
-Vcs-Git: https://salsa.debian.org/glibc-team/glibc.git -b glibc-2.28
+Vcs-Git: https://salsa.debian.org/glibc-team/glibc.git
 Homepage: https://www.gnu.org/software/libc/libc.html
 
 Package: libc-bin
