--- a/debian/rules
+++ b/debian/rules
@@ -190,7 +190,7 @@ clean:: unpatch
 	rm -rf debian/include
 	rm -f debian/control.in/libc0.1 debian/control.in/libc0.3 \
 		debian/control.in/libc6 debian/control.in/libc6.1 \
-		debian/*.preinst.* debian/locales.bug-presubj
+		debian/*.preinst.*
 
 # Required Debian targets
 build-arch: $(stamp)info \
