--- a/debian/rules
+++ b/debian/rules
@@ -162,6 +162,7 @@ standard-add-ons = libidn,
 
 -include debian/sysdeps/$(DEB_HOST_ARCH_OS).mk
 -include debian/sysdeps/$(DEB_HOST_ARCH).mk
+include debian/sysdeps/prof.mk
 
 ifneq ($(filter stage1,$(DEB_BUILD_PROFILES)),)
 DEB_ARCH_REGULAR_PACKAGES += $(foreach p,$(DEB_ARCH_MULTILIB_PACKAGES), $(if $(findstring -dev,$(p)), $(p)))
@@ -176,7 +177,7 @@ NOSTRIP_$(libc)-dbg = 1
 DEBUG_$(libc) = 1
 DEBUG_libc6-xen = 1
 DEBUG_libc6.1-alphaev67 = 1
-DEBUG_libc6-lse = 1
+DEBUG_libc6-prof = 1
 
 ifeq ($(filter stage1,$(DEB_BUILD_PROFILES)),)
   ifeq ($(threads),yes)
@@ -199,7 +200,7 @@ clean:: unpatch
 # Required Debian targets
 build-arch: $(stamp)info \
 	$(patsubst %,$(stamp)build_%,$(GLIBC_PASSES)) \
-	$(patsubst %,$(stamp)check_%,$(filter-out $(GLIBC_PASSES_NOCHECK),$(GLIBC_PASSES)))
+	$(patsubst %,$(stamp)check_%,$(GLIBC_PASSES))
 ifeq ($(filter stage1,$(DEB_BUILD_PROFILES)),)
 build-arch: $(stamp)build_C.UTF-8 \
 	$(stamp)build_locales-all
