--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,3 +1,5 @@
 [buildpackage]
 pristine-tar = False
 overlay = True
+debian-tag = ubuntu/%(version)s
+debian-tag-msg= %(pkg)s Ubuntu release %(version)s
