--- a/debian/control
+++ b/debian/control
@@ -839,13 +839,13 @@ Description: GNU C Library: Shared libraries (EV67 optimized)
  this on an older machine, it won't even be used.
 
 Package: libc6-prof
-Architecture: amd64 arm64 armhf ppc64el
+Architecture: amd64 arm64 armhf ppc64el riscv64
 Section: libs
 Priority: optional
 Multi-Arch: same
 Depends: libc6 (= ${binary:Version}), ${misc:Depends}
 Suggests: bpftrace
-Build-Profiles: <!stage1>
+Build-Profiles: <!stage1> <!stage2>
 Description: GNU C Library: Shared Libraries
  Contains the standard libraries that are used by nearly all programs on
  the system. This package includes shared versions of the standard C library
